# compositional-ai

./: Cargo.toml  README.md  course.md  justfile
.github/workflows/: ci.yml
crates/agents/: Cargo.toml
crates/agents/examples/: session21_agents.rs
crates/agents/src/: agent.rs  hooks.rs  lib.rs  llm.rs  orchestrator.rs  requests.rs  tool.rs  trace.rs
crates/core/: Cargo.toml
crates/core/examples/: session19_operads.rs  session2_shapes.rs  session3_categories.rs  session4_diagrams.rs  session5_parallel.rs  session6_rendering.rs
crates/core/src/: capability.rs  cat.rs  diagram.rs  error.rs  lib.rs  operad.rs  parallel.rs  shape.rs  tracing.rs
crates/core/tests/: shape.rs  smoke.rs
crates/diff/: Cargo.toml
crates/diff/examples/: session10_training.rs  session7_typed_tensors.rs  session8_forward.rs  session9_backward.rs
crates/diff/src/: backward.rs  forward.rs  lib.rs  ops.rs  optim.rs  tensor.rs  train.rs
crates/games/: Cargo.toml
crates/games/examples/: session17_rollout.rs  session18_5_scoped_agents.rs
crates/games/src/: env.rs  error.rs  lib.rs  policy.rs  rollout.rs  scoped.rs
crates/nlp/: Cargo.toml
crates/nlp/examples/: session15_5_tensor_semantics.rs  session15_pregroup.rs  session16_discocat.rs
crates/nlp/src/: discocat.rs  error.rs  lib.rs  pregroup.rs  semantics.rs
crates/prob/: Cargo.toml
crates/prob/examples/: session11_stochastic.rs  session12_bayesnets.rs  session13_conditioning.rs  session14_5_gaussian_kernels.rs  session14_interventions.rs
crates/prob/src/: bayesnet.rs  causal.rs  dist.rs  error.rs  gaussian.rs  inference.rs  kernel.rs  lib.rs
docs/: agentica-improvements.md  course.md  harness.md  rust-native-agents.md
notes/: 1.md  10.md  11.md  12.md  13.md  14.5.md  14.md  15.5.md  15.md  16.md  17.md  18.5.md  19.md  2.md  20.md  21.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  core-vs-agents.md
