[package]
name = "compositional-agents"
version.workspace = true
edition.workspace = true
description = "Rust-native AI agent framework with compile-time safety guarantees"
license.workspace = true

[dependencies]
compositional-core = { path = "../core" }
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
